2008-03-28 mentaer <sstein@geo.unizh.ch>
	  exchanged SrcA and SrcB so that spatial criteria is readable 
	  in dialog from top to bottom 
	  changed: com/vividsolutions/jump/ui/plugin/analysis/SpatialJoinPlugIn.java
	  		   
2008-03-27 mentaer <sstein@geo.unizh.ch>
	  hopefuly fixed bug (1775862) in Transfer Attributes Plugin 
	  changed: org/openjump/core/ui/plugin/tools/SpatialJoinPlugIn.java
	  		   com/vividsolutions/jump/tools/AttributeMapping.java
	  Btw.: This function is also acomplished by 
	  		   Tools\Analysis\Spatial Join of Geometries...
	  
2008-03-27 mentaer <sstein@geo.unizh.ch>
	  Added transfer of attributes when Thiessen polygons are created
	  changed: org/openjump/core/ui/plugin/tools/CreateThiessenPolygonsPlugIn.java
	  note:  translation needs to be added (defered because Peppe works on it)
	  
2008-03-25 Andreas Schmitz <schmitz@lat-lon.de>
      src/org/openjump/OpenJumpConfiguration.java,
      src/org/openjump/core/ui/plugin/style/ImportSLDPlugIn.java,
      src/de/latlon/deejump/plugin/style/LayerStyle2SLDPlugIn.java:
      Switched positions of SLD related menu entries.

2008-03-21 mentaer <sstein@geo.unizh.ch>
	  Added category tools from Pirol Projekt
	  added: org/openjump/core/ui/plugin/mousemenu/category/*
	  		 org/openjump/core/apitools/PlugInContextTools.java
	  change:  src/org/openjump/OpenJumpConfiguration.java
	  	  
	  
2008-03-21 mentaer <sstein@geo.unizh.ch>
	  cleaned up the menus (Layer Menu, Category popup menu,
	  Layer popup menu). Moved ExtractLayerInFence and ExtractLayersByGeometry
	  from layer popup to Edit menu. Removed also DeleteAllFeatures from popup.
	  Note: we need to check Postgis Plugin needs (I left the LoadDataSet for 
	  now) and where the MrSID files need to be placed (e.g. mrsidgeoinfo.exe
	  and mrsidgeodecode.exe)
	  
2008-03-21 mentaer <sstein@geo.unizh.ch>
	  replaced JTS version 1.72 by 1.9
	  this required to change as well a classpath in 